Making progress. now have the SEO component made. extended our page queries. added a static query hook for smaller components. Pretty much finished with the individual Post template .. but need to check the styling .. also need to finish the main blog page with a list of posts.

--- a/content/posts/code-example/index.mdx
+++ b/content/posts/code-example/index.mdx
@@ -1,11 +1,12 @@
 ---
 title: Code Block Examples
 date: 2023-06-19
-slug: code-block-examples
+slug: /code-block-examples
 tags:
   - code
   - examples
   - test
+description: Code Block Examples with some inline templating to test.
 ---
 
 ## Code Block Examples
