--- a/content/posts/post1/post1.mdx
+++ b/content/posts/post1/post1.mdx
@@ -1,7 +1,13 @@
 ---
 title: Test Post 1
+date: 2020-01-01
 slug: /test-post-1
-description: You ever derp doo-da-deedle-da? .. na
+description: Here we have a test post, one of the first from the Abort to Orbit blog.
+tags:
+  - starter
+  - test
+  - post
+banner: ./sd-keras-output1.png
 ---
 
 ## First Heading
