--- a/content/posts/code-example/index.mdx
+++ b/content/posts/code-example/index.mdx
@@ -3,13 +3,16 @@ title: Code Block Examples
 date: 2023-06-19
 slug: /code-block-examples
 tags:
-  - code
-  - examples
-  - test
+  - name: code
+    slug: /code
+  - name: examples
+    slug: /examples
+  - name: test
+    slug: /test
 description: Code Block Examples with some inline templating to test.
 ---
 
-## Code Block Examples
+## Default Abilities with MDX
 
 Take a look at the following block of code.. We will take a look after the page builds.
 
