--- a/content/posts/post1/post1.mdx
+++ b/content/posts/post1/post1.mdx
@@ -1,12 +1,17 @@
 ---
 title: Test Post 1
-date: 2020-01-01
+date: 2023-06-25
 slug: /test-post-1
 description: Here we have a test post, one of the first from the Abort to Orbit blog.
 tags:
-  - starter
-  - test
-  - post
+  - name: starter
+    slug: /starter
+  - name: test
+    slug: /test
+  - name: post
+    slug: /post
+  - name: stable-difusion
+    slug: /stable-diffusion
 banner: ./sd-keras-output1.png
 ---
 
