added spacing to all divs within the provider class of blog post template. Made some color changes to work in diff modes.

--- a/content/posts/post1/post1.mdx
+++ b/content/posts/post1/post1.mdx
@@ -28,8 +28,7 @@ Morbi mi bling bling, sempizzle dang, dang eu, pretium cool, velizzle. The bizzl
 ![stable-diffusion-astronauts-on-horses](./sd-keras-output1.png)
 
 <div
-  className="test-style-class"
-  style={{ display: "flex", justifyContent: "center" }}
+  className="item"
 >
   ### Test Div TextNode
 </div>
