Added a decently cool background svg image and adjusted opacity. Fixed some issues then stemming from low-weight paragraph text in template. Made and removed layout margins and padding etc.

--- a/content/posts/post1/post1.mdx
+++ b/content/posts/post1/post1.mdx
@@ -17,21 +17,63 @@ banner: ./sd-keras-output1.png
 
 ## First Heading
 
-Sizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle urna, luctizzle et, shit izzle, sollicitudin funky fresh, fo. Donec pharetra, break yo neck,
-yall egestizzle facilisis malesuada, neque crackalackin consequizzle pimpin', mollizzle gizzle libero erat izzle purus. Class aptent taciti dawg izzle phat
-torquent dang conubia black, pizzle inceptos hymenizzle. Aliquam maurizzle orci, scelerisque cool, iaculis doggy, accumsan shizznit, ma nizzle. Nunc lacus.
-Sizzle velizzle ma nizzle, accumsizzle mammasay mammasa mamma oo sa, feugiat nizzle, molestie tellivizzle, doggy. Curabitur shizznit. Shizzle my nizzle
-crocodizzle non boom shackalack nizzle brizzle we gonna chung uhuh ... yih!. Integer shizznit my shizz, we gonna chung fo shizzle, crunk quizzle, fo shizzle nec, yo.
-Mofo ut pede. For sure da bomb. Nulla enim. That's the shizzle blandizzle. Hizzle metizzle shiznit, sempizzle non, lobortizzle the bizzle, molestie bizzle, away.
-Morbi mi bling bling, sempizzle dang, dang eu, pretium cool, velizzle. The bizzle dictum tellus fo shizzle we gonna chung tempus yippiyo.
+**NOTE: This story taken from <a href="https://getpocket.com/explore/item/for-better-coffee-start-with-fewer-beans?utm_source=pocket-newtab-en-us">this Pocket article</a>
+and is not my own work. It's used here only for blogsite testing purposes.**
+
+Here's some tiresome news for coffee-enthusiasts everywhere: Your morning cup of joe might not be as invigorating as you thought.
+The conventional coffee-brewing technique—grinding large amounts of beans as finely as possible—may actually deliver an inferior beverage,
+and waste grounds in the process. To provide a consistently high-quality drink, coffee producers should instead grind beans more coarsely and use fewer of them,
+according to a 2020 study published by <a href="https://www.cell.com/matter/fulltext/S2590-2385(19)30410-2">Matter.</a>
+
+Coffee works its magic on sleep-deprived folks everywhere because it contains heavenly caffeine molecules extracted from coffee beans.
+That extraction process varies depending on the type of drink you want to make (hello espresso, drip coffee, french press) but they have the same general steps.
+Raw coffee beans are roasted, ground, and then mixed with hot water. The resulting filtered liquid, when done right, can make many a day better.
+But a group of researchers wondered whether the traditional method of using high quantities of very finely ground coffee would indeed produce a primo beverage.
+
+To figure that out, researchers first narrowed in on espresso, the concentrated drink that often gives rise to cappuccinos and lattes.
+Then, they developed a mathematical model to optimally extract espresso from coffee grounds, a difficult task, they soon found, due to the complexity of java's natural shapes.
+The beans come in two groups of particle sizes, _boulders_ and _fines_, similar to the families of exploding volcanic rock.
+
+“You would need more computing power than Google has to accurately solve the physics and transport equations of brewing on a geometry as intricate as a coffee [filter bed],”
+says co-senior author Jamie M. Foster, a mathematician at the University of Portsmouth.
+
+To calculate the transfer of mass from solid to liquid—that's what happens when hot liquid combines with coffee grounds to create the signature beverage—scientists turned to battery modeling methodologies.
+They likened the movement of lithium ions through a battery's electrodes to molecules like caffeine dissolving out of coffee grounds.
+Ultimately, the team chose to specifically analyze espresso-style coffee because the drink's small size tends to magnify any brewing errors.
+
+The researchers looked at various components of the brewing process, including dry coffee mass, water pressure, and the grounds' coarseness.
+They found that fine grounds tend to clog espresso machines; ultimately, a stuffed coffee bed will stall the amount of liquid that can get extracted during the brewing process, and produce an uneven taste.
+
+“Most people in the coffee industry are using fine-grind settings and lots of coffee beans to get a mix of bitterness and sour acidity that is unpredictable and irreproducible,”
+says co-senior author Christopher H. Hendon, a computational chemist at the University of Oregon.
+
+Though you'd expect finely ground beans to wet evenly within machines, some regions get more drenched than others; as a result, over-extracted areas produce bitter flavors and under-extracted ones add sourness.
+So with this method, it's hard to get consistent espresso flavor and a high brewing ratio.
+
+Meanwhile, coarse grounds are more efficient and yield more reproducible flavors.
+They require shorter espresso shot times (between 7 and 15 seconds) unlike the industry standard that falls between about 25 and 35 seconds.
+Longer shots further the dissolution of coffee compounds and thus carry a burnt essence, which is certainly not for everyone. Still, taste is undeniably subjective.
+The study does not claim to have mastered espresso flavors, but rather provides a starting point for more research.
+
+Besides a reliable taste, the study also stresses the economic and environmental benefits of using fewer, coarser beans.
+When implemented in an Oregon cafe, the approach led to a 25 percent reduction in used coffee grounds between September 2018 and 2019.
+On a broader, nation-wide scale, the team calculated $1.1 billion in potential annual savings.
+
+Less resource-intensive coffee also could be useful as climate change threatens coffee crops around the world.
+The crop requires a low-carbon dioxide environment with relatively stable temperatures, usually guaranteed by high altitudes near the equator.
+Yet, major coffee exporters can no longer predict crop outcomes. Ethiopia, for example, has faced rising temperatures and decreasing rainfall;
+the country could lose up to 59 percent of coffee farmland by century's end. In 2014, Brazils drought doubled global coffee prices.
+
+Though coffee roasters and producers may fear using fewer coffee grounds in stores,
+Hendon predicts a resulting heightened demand for fancy brews as more shops gain access.
+Eventually, he says, the method could allow higher-quality coffee to become more ubiquitous.
+
+While the brewing model may not work for everyone, Hendon hopes it could lead to more sustainable and reproducible brewing methods and conditions.
+
+“There is a tremendous dependency on the preferences of the person producing the coffee,” Hendon says.
+“We are elucidating the variables that they need to consider if they want to better navigate the parameter space of brewing espresso.”
 
 ![stable-diffusion-astronauts-on-horses](./sd-keras-output1.png)
-
-<div
-  className="item"
->
-  ### Test Div TextNode
-</div>
 
 ## Second Heading
 
