re-raised the width of the layout container. Added working image. needs image editing.

--- a/content/posts/brazil/index.mdx
+++ b/content/posts/brazil/index.mdx
@@ -26,6 +26,9 @@ description: Reflecting on a 2-week coding workcation in Rio de Janeiro, Brazil.
 
 ## Brazil To Code
 
-![Leblon Beach, Rio de Janeiro, Brazil](./leblon-beach-sunset.png)
+
+![Leblon Beach at sunset, Rio de Janeiro, Brazil](./leblon-beach-sunset.png "Leblon Beach at sunset, Rio de Janeiro, Brazil")
+
+
 
 Let me tell you something. 
