--- a/content/posts/brazil/index.mdx
+++ b/content/posts/brazil/index.mdx
@@ -1,10 +1,12 @@
 ---
-title: Brazil To Code
+title: Dev in De Janeiro
 date: 2023-11-16
-slug: /brazil-to-code
+slug: /dev-in-de-janeiro
 tags:
   - name: coding
     slug: /coding
+  - name: development
+    slug: /development
   - name: travel
     slug: /travel
   - name: remote-work
@@ -24,11 +26,12 @@ tags:
 description: Reflecting on a 2-week coding workcation in Rio de Janeiro, Brazil. Advice for remote working American developers and engineers considering a similar trip. Quick word on the beautiful people of Brazil.
 ---
 
-## Brazil To Code
+## Welcome to Brazil! 
+
+![Sunset on Leblon Beach, Rio de Janeiro, Brazil](./leblon-sunset-chopped-2-2000w.png)
 
 
-![Leblon Beach at sunset, Rio de Janeiro, Brazil](./leblon-beach-sunset.png "Leblon Beach at sunset, Rio de Janeiro, Brazil")
 
 
-
+## Introduction
 Let me tell you something. 
